<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">What\'s doing?</string>
    <string name="today_summary">Today\'s Working Summary</string>
    <string name="start_recording">Today\'s Start</string>
    <string name="finish_recording">Today\'s Finish</string>
    <string name="now_recording">Now recording...</string>
    <string name="task_code">CODE</string>
    <string name="task_name">DESCRIPTION</string>
    <string name="change_task">Change</string>
    <string name="daily_summary">Daily</string>
    <string name="monthly_summary">Monthly</string>
    <string name="appPreferences">Setting</string>
    <string name="define_task">New Task</string>
    <string name="selectTask">Select your task</string>
    <string name="task_list">Task List</string>
    <string name="no_data">No Task</string>
    <string name="delete_task">Delete</string>
    <string name="should_not_be_empty">should not be empty</string>
    <string name="has_the_same_code">You has the same code</string>
    <string name="edit_task">Edit Task</string>
    <string name="cannot_delete">You cannot delete currently recording task</string>
    <string name="daily_total">Daily Total</string>
    <string name="daily_summary_title">The Daily Summary</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="select_date">Select Date</string>
    <string name="dateformat">MMMMMMMM dd, yyyy</string>
    <string name="adjust">Auto Adjust</string>
    <string name="send">Send Mail</string>
    <string name="daily_work_report">Daily Work Report</string>
    <string name="work_date">Work Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="duration">Duration</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="no_email_client">There is no email client installed</string>
    <string name="failed_to_save">Failed to save the date</string>
    <string name="add_a_missing_task">Add a missing task ...</string>
    <string name="should_be_alpha_numeric">You should name alpha numeric code</string>
    <string name="monthly_summary_title">The Monthly Summary</string>
    <string name="select_month">Select Date</string>
    <string name="monthformat">MMMMMMMM yyyy</string>
    <string name="monthly_total">Monthly Total</string>
    <string name="monthly_summary_time_default_text">0 days 00:00:00</string>
    <string name="monthly_summary_preferences">monthly summary</string>
    <string name="monthly_summary_preference_time_of_day_title">job standard time</string>
    <string name="monthly_summary_preference_time_of_day_summary">how long do you work a day ?</string>
    <string name="monthly_summary_preference_time_of_day_dialog_title">working hours, a day(1-24)</string>
    <string name="monthly_ummary_preference_time_of_day_input_msg">input number, 1-24</string>
    <string name="sunday">Sun.</string>
    <string name="monday">Mon.</string>
    <string name="tuesday">Tue.</string>
    <string name="wednesday">Wed.</string>
    <string name="thursday">Thu.</string>
    <string name="friday">Fri.</string>
    <string name="saturday">Sat.</string>
</resources>