<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_list"
        android:textSize="20dp" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_weight="50" />

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textSize="20dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="2" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/deleteTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="deleteTask"
                android:text="@string/delete_task" />

            <EditText
                android:id="@+id/definedTaskCode"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/definedDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Button
                android:id="@+id/defineTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="defineTask"
                android:text="@string/define_task" />

        </TableRow>
    </TableLayout>

</LinearLayout>