<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res/jp.gr.java_conf.choplin_j.imanani"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:text="@string/today_summary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/totalTimeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="00:00:00"
                android:textSize="18dp" />

        </LinearLayout>

            <ToggleButton
                android:id="@+id/toggleRecordingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/toggle_button"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textOff="@string/start_recording"
                android:textOn="@string/finish_recording" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recordingLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="4"
        android:background="#066"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/recordingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:textColor="#f0e68c"
            android:text="@string/now_recording" />

        <jp.gr.java_conf.choplin_j.imanani.TaskSelectionSpinner
            android:id="@+id/selectTaskSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:prompt="@string/selectTask" />

        <TextView
            android:id="@+id/durationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="00:00:00"
            android:textSize="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical" >

      <jp.gr.java_conf.choplin_j.imanani.TaskInputView
          android:id="@+id/taskInputView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>