<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

  <TextView
      android:id="@+id/taskCodeView"
      android:layout_width="80sp"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginLeft="5dp"
      android:layout_marginTop="5dp"
      android:text="@string/task_code" />

  <TextView
      android:id="@+id/taskDescriptionView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignTop="@id/taskCodeView"
      android:layout_toRightOf="@+id/taskCodeView"
      android:layout_marginRight="2dp"
      android:text="@string/task_name" />

  <jp.gr.java_conf.choplin_j.imanani.TaskCompleteView
      android:id="@+id/taskCompleteView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:dropDownWidth="match_parent"
      android:dropDownHorizontalOffset="2dp"
      android:completionThreshold="1"
      android:layout_alignLeft="@id/taskCodeView"
      android:layout_alignRight="@id/taskCodeView"
      android:layout_below="@id/taskCodeView"
      android:layout_marginTop="5dp" />

  <EditText
      android:id="@+id/taskDescriptionInput"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/taskDescriptionView"
      android:layout_alignTop="@+id/taskCompleteView"
      android:layout_marginRight="5dp" >

  </EditText>

  <Button
      android:id="@+id/changeTaskButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/taskCompleteView"
      android:layout_below="@+id/taskCompleteView"
      android:text="@string/change_task" />

</RelativeLayout>
