<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/dateSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/dateSelectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectDate"
            android:text="9999年99月99日(火)" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/daily_summary_title" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/summaryView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateSelector" >

        <TextView
            android:id="@+id/startTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:padding="5dp"
            android:text="@string/start_recording"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/startTimeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/startTimeText"
            android:padding="5dp"
            android:text="9999/99/99 00:00:00"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/startTimeUp"
            android:layout_width="36dp"
            android:layout_height="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_alignBottom="@+id/startTimeView"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/startTimeView"
            android:clickable="true"
            android:src="@drawable/plus_button" />

        <ImageView
            android:id="@+id/startTimeDown"
            android:layout_width="36dp"
            android:layout_height="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_alignBottom="@+id/startTimeView"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/startTimeUp"
            android:clickable="true"
            android:src="@drawable/minus_button" />

        <TextView
            android:id="@+id/endTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/startTimeText"
            android:layout_below="@+id/startTimeText"
            android:padding="5dp"
            android:text="@string/finish_recording"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/endTimeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startTimeView"
            android:layout_toRightOf="@+id/endTimeText"
            android:padding="5dp"
            android:text="9999/99/99 00:00:00"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/endTimeUp"
            android:layout_width="36dp"
            android:layout_height="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_alignBottom="@+id/endTimeView"
            android:layout_below="@+id/startTimeUp"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/endTimeView"
            android:clickable="true"
            android:src="@drawable/plus_button" />

        <ImageView
            android:id="@+id/endTimeDown"
            android:layout_width="36dp"
            android:layout_height="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_alignBottom="@+id/endTimeView"
            android:layout_below="@+id/startTimeDown"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/endTimeUp"
            android:clickable="true"
            android:src="@drawable/minus_button" />

        <ImageView
            android:id="@+id/recordSeparator"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/endTimeText"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_bright" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/endTimeText"
            android:layout_below="@+id/endTimeText"
            android:padding="5dp"
            android:text="@string/daily_total"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/totalTimeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/endTimeView"
            android:layout_below="@+id/endTimeView"
            android:padding="5dp"
            android:text="00:00:00"
            android:textSize="16dp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/operationButtons"
        android:layout_below="@+id/summaryView" >

    </ListView>

    <LinearLayout
        android:id="@+id/operationButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="bottom|center" >

        <Button
            android:id="@+id/resetButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>

</RelativeLayout>